# ChangeLog for app-editors/mg
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/mg/ChangeLog,v 1.86 2014/11/12 22:45:41 blueness Exp $

  12 Nov 2014; Anthony G. Basile <blueness@gentoo.org> mg-20140414.ebuild,
  mg-20141007.ebuild:
  Keyword ~ppc ~ppc64, bug #503166

*mg-20141007 (07 Oct 2014)

  07 Oct 2014; Ulrich Müller <ulm@gentoo.org> +mg-20141007.ebuild:
  Version bump.

  29 Aug 2014; Ulrich Müller <ulm@gentoo.org> mg-20140414.ebuild:
  Replace einstall by dobin/doman, bug 521422.

  05 Aug 2014; Raúl Porcel <armin76@gentoo.org> mg-20140414.ebuild:
  sparc stable wrt #510330

  20 Jul 2014; Tobias Klausmann <klausman@gentoo.org> mg-20140414.ebuild:
  Stable on alpha, bug #510330

  18 Jul 2014; Tobias Klausmann <klausman@gentoo.org> mg-20140414.ebuild:
  Keyworded on alpha, bug #503166

  13 Jun 2014; Ulrich Müller <ulm@gentoo.org> -mg-20140306.ebuild,
  mg-20140414.ebuild:
  Stable for amd64, bug 510330. Remove intermediate version.

  25 May 2014; Markus Meier <maekke@gentoo.org> mg-20140414.ebuild:
  arm stable, bug #510330

  16 May 2014; Jeroen Roovers <jer@gentoo.org> mg-20140414.ebuild:
  Stable for HPPA (bug #510330).

*mg-20140414 (20 Apr 2014)

  20 Apr 2014; Ulrich Müller <ulm@gentoo.org> -mg-20140406.ebuild,
  +mg-20140414.ebuild:
  Version bump.

*mg-20140406 (06 Apr 2014)

  06 Apr 2014; Ulrich Müller <ulm@gentoo.org> +mg-20140406.ebuild:
  Version bump.

  22 Mar 2014; Chema Alonso <nimiux@gentoo.org> mg-20140306.ebuild:
  Stable for amd64 wrt bug #504870

  22 Mar 2014; Markus Meier <maekke@gentoo.org> mg-20140306.ebuild:
  add ~arm, bug #503224

  20 Mar 2014; Jeroen Roovers <jer@gentoo.org> mg-20140306.ebuild:
  Stable for HPPA (bug #504870).

  13 Mar 2014; Ulrich Müller <ulm@gentoo.org> -mg-20131118.ebuild,
  -mg-20140220.ebuild, -files/mg-20140220-freebsd.patch:
  Remove intermediate versions.

*mg-20140306 (07 Mar 2014)
