@@ -4,25 +4,24 @@ Hash: SHA256
 DIST mg-20110905.tar.gz 138805 SHA256 1cd37d7e6a3eecc890a5718c38b8f38495057ba93856762a756ccee2f9618229 SHA512 b490a5a3526d35839353e138f33ac924c5afbbf7e5c9faa20ceccb82e1dc1e6a3f0726b32bac7d43dcf8a410b1b8525067da5557cf669c52a9e32d1d2f45a8a4 WHIRLPOOL 64dd179462a8c9e53946c756a4975ffd2e5bf1758a300fa699032542a6e2470f9ed03f9fe1a88ac441cf17ac20c2575f9b6c5c1c396c5a7915564fbedfb1c854
 DIST mg-20140414.tar.gz 142570 SHA256 89ce25ee13cedc14c3c5c7b76d7a9e0ea38a060ad61e90ac43258d8dadf0d065 SHA512 b080b24c6015225ee1670eb6f062a21f40d34b02c699687d92842983506497c93e15cceb79d05b6cbbebfa8466f7261cb7dde8bcc4888489236cf64104215161 WHIRLPOOL 3630ff9a4228c00e2ec85d93c00bcda1355d0902805a54a158fbb86f48e1e4d9823db2ea16520ff71242ea64f659028330b1ed55c42d7ad6528e4060018a3c9a
 DIST mg-20141007.tar.gz 142915 SHA256 591adc66e4e4d620375b7fd3e40fc906135a154f06e26f12e58889e4447a9461 SHA512 f432268b206cbde0e562616a0f664a1857454a60a37cc9c56feeb33908420ae63798fc2787e076a105232515f3345943cbebc63b577f18669ac36e1f7cb77faf WHIRLPOOL edcfbf4eccaae18b9222110eb0ff7b51eb055e900fbea5e47a7f65b6226399fc37f65f737611ad676fda93c7d94ee8dbaf3f9260678648ae444299e7b059c68c
+DIST mg-20141127.tar.gz 143364 SHA256 33cccebca1cb129de5f26d74750d5a1654bd461e6ab0785703de9f16c19b0ba6 SHA512 97160f311b0409c70162dc80d72370e828db6181fa4bf11a045f01b7df8c272edeade5d6f3e2af7fa74f59152fe69130d5638b2c184974e59c4bb6fe27864d40 WHIRLPOOL 5591e36139e5da3329d9fa7f17b2e21987a8674c7c3c8edeb17bbd8c93879447374d70808af86d38de23f28f6e3b491def437b9135193abec02dc9eaae691b0b
 EBUILD mg-20110905-r1.ebuild 1219 SHA256 242469a115a7a3e9b8cad1aeeb430246f8a6fedfbe3b48f6502b3d61c6ee330e SHA512 93b4b738b468bc163f1ae5a617b4d8e76e55b83af697834cee539fdb864317b75627feb2fda55be0092d457dfb2e7e64cc630667086abef61b593dff04d69cb9 WHIRLPOOL b3ed099897c61d3b412a1f3d5105ce6b0e57ccf199d08b675e7256e72f79aa0fe3563e816e10d90afd1d0c88d0fea0bd644da3167e78a6e41fc7b543b17a9b71
 EBUILD mg-20140414.ebuild 1298 SHA256 078a8dd6d15a0f68cc2b9fb06a0aa8b16c191d8ad5802ed3c8ad1e237954d425 SHA512 d92d0e1a9dfa764c3fe52e7f8e7f7f871905aefd13df22e5857c159026d4b8707cf4f426d19860202c283a6265f45b22c5dd493508b971722d2d2b10ef1ad365 WHIRLPOOL 9b0d12a2b0855bcbe309e905eba4cb7346b090e985029588eaada5f1da7d9dd2f9930b551134310006cd9acaba92e718385c4b54917e9cd8a4fdc92312a67f44
 EBUILD mg-20141007.ebuild 1303 SHA256 7b7ebb3c207b2f5ac5460eb8b095afd60c9841a3fae1169187494a12c11b9149 SHA512 40456bdfbf69957ca662f42d77831fd00367bf0e3bd81ee7243c4d3623d6d3543f27b59b027a4b6f156e2367ad931250b1f0d61c98cec96f1342a3dfaae3b511 WHIRLPOOL 219cc7eafca4d28b54cdb1b5782bb9e7e5ab2d9cb622d7fef8629461c70c6e6135a62563d18e1aae2e43b56751153cebe36eadd6e0d0c0c589a4905272db22c4
-MISC ChangeLog 10395 SHA256 9b4357a890c5c61ab2e589994bd0e2d0802c5939a4eb929a1940e58719540a9c SHA512 928c69d01e84cb93a2706ddbc33ac05156c5b265f03aaa8978ff000b83c23e25dca1a842876d1411ad5ca081a559b0a8a9d8c4a483393afc3215cec15b628c94 WHIRLPOOL f8b9b2e9aca1ecbc2b44ddf93ca01b683555d7452d4282afa6f8c616ca88a61dbbbcde38c7906b6fe20976141796d739f99cda2ac14b2717265997d9c86d4c2e
+EBUILD mg-20141127.ebuild 1298 SHA256 2262b4f7c606ef3a5f57cbb79c08f84606ebe8e721d31712e31798dc36c07c48 SHA512 aee7b058ec22537bc742959009d314cab40f771b6129db0bef8dd7301abeecd4a36f654ef08afc729b79081786225ee9ad53d2a38517e08c1208877095ce854f WHIRLPOOL c94230fc13971c28dd0210740cb6cda6afacfcc6ac4577049a68878cbc0e5e9a390eece26c14a58c428017fafc1b341acf842e76cf24be9359b79bf2d7d305c9
+MISC ChangeLog 10503 SHA256 8a71d8648fdde0ae01e3c8d786be88535dc255d1442ae8adfe1ee7f038eadc6f SHA512 f4d4a5d1ea6b7e7278fcb989f2553364511c6c0eb8a91edb1c40b36fd7d1ece895e9f6c6ba4ed1f3ca2a3137904926678e43a963afaf1ccba74a0ce951ba4b6e WHIRLPOOL c1883e57703c4d1dc9162d9c069010e564b18b099d03b63b4941aacb611cf3c577388f890f9a26216c5c37dce120689c1c710102e94c1733d1f33b1d1e365e36
 MISC metadata.xml 291 SHA256 65d24d4c0b435503345283db1c00cc7161174eddecc4d737cbf50d924145ca6c SHA512 2ba87a6af0cc36ed2e49ded86f81a6e30b2b9ca9e73949860db9f30bac95ad7374fe1e0c5e712f3c427a8a562ceb57c9693aea967f7c134d5858aca4ec704ba2 WHIRLPOOL 604f60f36640570753ef76af4f260e3103dc8cdfbb8dc00d585d864a6ce8fc3f573a95340720d00c9ebfccc817c13065419090aad6c281a96106b423bd88bd38
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUY+OhAAoJEJOE+m71LUu6paoP/2A/n7OlZD59YALZTSeAwAr+
-LQTp9hdVLNNWlxaHjrbRNDLtLAIJxcHZNOYMyEDKm1isml5bEVi996azIrVrJ1R0
-yJ+Ka3XKTcErBKedn3RKY9XmPFN/XO0BasFkGDudSo4fcFUE74MqiINZ8qgcXC98
-709gakNPKWafifx5gvqAvJm0t1Lx7b2RNfVDDsXBKLWJX3M4zzhoCm71UqTElCUA
-AOU7I6AWDogaRmXjiNwpFweX009aj/enLsW9UMqCoGDMT+24Rhl4L9E4h2yUv72R
-j0Pn44oLifC8G9w53ZlDfPnvYPqy1JXEZ/gk1BmRHBfDKcfP12R2b8/acc8WKgTi
-zYxZXBbpNMvbOo4nyrw1fB5uKPJJEyaCDlUVWK7HqV2Zl7blyT3dHwwD4JAIAFkt
-cguW8dFiThzFlr34qYXx5OwuzM6aCbth/kVC780zEAo7+dKO7/corTCZZ3Dw3o4p
-zyfjF8VO/bfWtV+qtveqqSJ26/sr/OwK7gzNEsTZ/vadGbda//oupHfI+7V46VPN
-YftFWcRxTD058LONdXjvWGjh32dK7zci3Itx4zBkQu3R+C+HUWCVXYUCS4yZkZXq
-tLlWLbUpCasgaGvO5x5JxqZoCjScMqDV7MMxfqMDQauCz+aZnfBG6449k5FO9jJw
-p/yacydHJfqzzGNqt/jM
-=VC88
+iQGcBAEBCAAGBQJUgxTyAAoJEJQzkH1pP7W4aGIL/2ORaVReeFgoIlyu4Ku7jWGx
+LsYhhjTHcOzNZMz6dsTfany3RENOgDmsl+RsL3tH+8ztuMMzpMvbncpw4kp4fb5P
+5Zi1WnPLYVs5o54JGqmspKnoP/wi0GFtbBFiZ+/fu4kQPtZgMDi0M/rXgusgw8df
+ZvR3cewtZDzQA8BqURGonlaAZ1u0ovNn/9CDzGE7YMpiWEZgLhhu3+YE70I+iJyS
+6nLXRWxFQOVJUW5uqY+bWop638HX5Dso58gv4IoqhXIMbNHvOUXXBwJcmPYUTgRY
+BaAVej6QByejeQORkGEssuxpw7mFY3MtuE/mwKtOba7p9BE7f/5GHB+vNpczJXbb
+BPS3eYLkd3sVsR8s+Oh/JjmT47pyeuILwsL3Y+5sFEVU+lwrbIL5x44bJ0XQFffJ
+LJy6eiCQIuscF714h/0f/A3mVYBGWbp1wFrV8GD7G3hrOj9E36RlddaIZMKeDsaE
+r+Rv4Ly7l/5zSJWXwSK02zJK1iuHIP/hG+Pwjatquw==
+=DkK9
 -----END PGP SIGNATURE-----
