@@ -14,12 +14,19 @@ DIST pulseaudio-5.0.tar.xz 1455428 SHA256 99c13a8b1249ddbd724f195579df79484e9af6
 EBUILD pulseaudio-5.0-r4.ebuild 10280 SHA256 ecfcb8e41987a89721eece1b90535d8b69e6051fc526b8017ed93cde28986588 SHA512 53bbcda4b9885cbdb4c3d2c3077052e519ceb64fe4ad74678eef75ddedd5590f4ea7b33efbd58bd8a35b29ab084fce596d8672188abf1b5b915ec007ee33cae0 WHIRLPOOL 7bb2a3898ee6b6775c51a207ff13102524f76ea38a49e68b30b647b8423eb456e841bf4e61fbe8a4bcb48a6cdbdd594253ccb1702989ac1ac460648e7f47e14d
 EBUILD pulseaudio-5.0-r5.ebuild 10463 SHA256 b74d44a38bcc42c73012138ced50c84f916d03068c439b6998940ea290372840 SHA512 5347fb31876ed4c72ef6596583f42e94a960eb97638f90921c51f75defbebf460b8c27b7b64d5beebf89c7cd0b3938f48746ad0ff5a6e572c5d419084000eada WHIRLPOOL cc5490557c23954787d44b0949794bcac9417cd7c39691db44fef865a28d4f6cc2dc1246f78f0ec12361f51a86d4f68b943a9c33242839e06fa96fbee7fef116
 EBUILD pulseaudio-5.0-r6.ebuild 10533 SHA256 392e4d555bee4b05fc7765d40474ae78b819dadc23c750ce5ecee808c1aa8620 SHA512 2f8d69b05cbe6b6878373e08e2f1bdc027b2a877e9586cdd540725c37d318b5c2a8c3be72328b216f1c59be40a6295cc1a9a996479d959bfdd2300f8dbbc934b WHIRLPOOL 3838b97f83025672b9ec8c139d59d1f22d283015efc5789d41e2f480d89756a5b97ef2ba0cc5d5d0dcd9a1d5a0cbfbe5a842241c27447c91ad5681f18b719c14
-MISC ChangeLog 68980 SHA256 e1dfd3efafe4069bd4daad677a5765c41bfcae336f7ccdc406142ab4b25be5ce SHA512 df188b6d78234429d3f4fb445fd9a7f5c86b3562654c40e77d6a7c5b355e626387ce5fc8399ab6b4faf47fca536fa9c82c123cdd187bb6589c257c965ba89295 WHIRLPOOL df596298e2b910382d5f7953ed9c0ec738f976ec36fc77cf238884cfe075b375f60804c541d6e91ff182b72e8cd7389a12c09a47527bba09c45bbf3da553cfd3
-MISC metadata.xml 3046 SHA256 e25b23335acfbb05882919c33cbb60e32c3e3cbd00176f94a9059adba05ae313 SHA512 6f566f880c729a8b04015cb056b6e652f82a49309beb166f2ca340949048f37e802647ddf58ee0ae4762cbe537b053968bcd4f8586220f33400437c5483ab235 WHIRLPOOL 17f09b3b1da837bae84a1374fa6ac773cdccc2c4408f7c6b1e5e380f9778ae7008959a18dc7e9a4cb1acf44e3be7b66316c14aed839373e8cc9a3f22ffa84bb1
+MISC ChangeLog 69052 SHA256 03202b956dc6159824397c87b97476e0c51c3dd6f492ae4277426a2d5070b047 SHA512 09ddc503c4bf56df5dee454df69ca6c84dd84d37d33d72535659b0f6aabbf92bf93542aa8665425aa32332fc17e2747db19200d5262d2f3059c0e17d274ee486 WHIRLPOOL 8a6a8aa2cc5ca7f9d5ea95d0d6e478b974f7d574c5f346589f21fdb6d766e9e48596bd410c7a20817760ec69bde7197760344714baa94c285a8d56e12c4660f0
+MISC metadata.xml 3051 SHA256 3362e5b815ff2cd38317100361b154c08db41f99fa973e067db82aae57feb2a3 SHA512 4fecf278339b700ff8ff519ba6d345da0fd809404f2ad46b96178784bd07fe2ba733670abf033e036ec816a6c6c026d1f003d6996531329d69d4bd4db94a1403 WHIRLPOOL 66e96152c60b1e734c7539bee39e950d1adcab885c4fe131c95695bc166a34f9651e0e627dd5418c59ce56116c0634468b074fffd4aff5ab30237239ce21b291
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlSC8DcACgkQCaWpQKGI+9Sk8QCeIspned/DC4DW11oxDbK/Nf/4
-v/gAn1fZ4CNw4AbPwAFNZcKRmN3/lnSl
-=mXna
+iQGcBAEBCAAGBQJUgxgwAAoJEJQzkH1pP7W4TRgL+QG337LX0QPWOppQlOFm2V4g
+Pxt+47f7iz+28huM0Y1zueB6dNyIZDZk+/tusxvdVTg+yRORElH2iGsEHO8ukQBR
+Rr3KP49H2W4zUTyYdDiaqHb42at1xvXr4Vmc/axbdiYOKVbtgZHwHYuqlH4aTeiJ
+vMELt4V18xFN61O+5s/sIMnN1idpXq2AUJlbkGOYJ7UXKlVvesS+pwRriqL2aX/y
+hJe9nmo2MC5Uz4DFzdZ07StllsdirkVsHS6dEHl/5zRmu8l6peECC+BW1GUmNS6/
+kVnAUdDMb8TyYIMvWDC353Nf8SlBm7MzkwAlVAJ992BUtVuBDgKzMInHu+2al1Q4
+Mkq0xE3miHBb7bYI7InPQI0nxuQyp5I2CCXIiH2q4u21xFdnS6R3Qo9n75WajCMJ
+hTDL1F0N1iqWI/UQfpgPMgEdkIyKRBCCtbi1s2O28LbhroaPrPovDqxSwEpioDqq
+qp0x1JIhnip6qHHhwg8cQsO1OukoKeX3PL7jhqVfBw==
+=83SV
 -----END PGP SIGNATURE-----
