@@ -20,7 +20,7 @@
    always a description without a lang attribute. Also there are no overlapping
    descriptions allowed (multiple description tags with the same language)
 
-   $Header: /var/cvsroot/gentoo/xml/htdocs/proj/en/metastructure/herds/herds.xml,v 1.1127 2014/11/26 16:30:02 titanofold Exp $
+   $Header: /var/cvsroot/gentoo/xml/htdocs/proj/en/metastructure/herds/herds.xml,v 1.1128 2014/12/06 14:35:18 perfinion Exp $
 
 -->
 <herds>
@@ -584,6 +584,11 @@
   	<name>Daniel Kuehn</name>
   	<role>Hardened development</role>
   </maintainer>
+  <maintainer>
+     <email>perfinion@gentoo.org</email>
+     <name>Jason Zaman</name>
+     <role>SELinux and hardened development</role>
+  </maintainer>
 </herd>
 <herd>
   <name>ppc</name>
@@ -822,6 +827,10 @@
   <maintainer>
     <email>xmw@gentoo.org</email>
     <name>Michael Weber</name>
+  </maintainer>
+  <maintainer>
+    <email>perfinion@gentoo.org</email>
+    <name>Jason Zaman</name>
   </maintainer>
 </herd>
 <herd>
@@ -2235,6 +2244,10 @@
     <maintainer>
         <email>prometheanfire@gentoo.org</email>
         <name>Matt Thode</name>
+    </maintainer>
+    <maintainer>
+        <email>perfinion@gentoo.org</email>
+        <name>Jason Zaman</name>
     </maintainer>
 </herd>
 <herd>
