@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile install postinst prepare
+DEPEND=sys-libs/ncurses !elibc_FreeBSD? ( dev-libs/libbsd ) virtual/pkgconfig
+DESCRIPTION=MicroGnuEmacs, a port from the BSDs
+EAPI=5
+HOMEPAGE=http://homepage.boetes.org/software/mg/
+IUSE=livecd
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ppc ~ppc64 ~sparc ~x86 ~amd64-fbsd ~x86-fbsd
+LICENSE=public-domain
+RDEPEND=sys-libs/ncurses !elibc_FreeBSD? ( dev-libs/libbsd )
+SLOT=0
+SRC_URI=http://homepage.boetes.org/software/mg/mg-20141127.tar.gz
+_eclasses_=eutils	6faef4c127028ccbba3a11400d24ae34	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
+_md5_=9eae075610d63e7657c46cdfb379321c
