@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/pulseaudio
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/pulseaudio/ChangeLog,v 1.363 2014/12/06 12:01:58 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/pulseaudio/ChangeLog,v 1.364 2014/12/06 14:48:09 ulm Exp $
+
+  06 Dec 2014; Ulrich Müller <ulm@gentoo.org> metadata.xml:
+  Fix typo.
 
   06 Dec 2014; Pacho Ramos <pacho@gentoo.org> pulseaudio-5.0-r6.ebuild:
   Add a reference for the future
