@@ -1,6 +1,11 @@
 # ChangeLog for app-editors/mg
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/mg/ChangeLog,v 1.86 2014/11/12 22:45:41 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/mg/ChangeLog,v 1.87 2014/12/06 14:34:01 ulm Exp $
+
+*mg-20141127 (06 Dec 2014)
+
+  06 Dec 2014; Ulrich Müller <ulm@gentoo.org> +mg-20141127.ebuild:
+  Version bump.
 
   12 Nov 2014; Anthony G. Basile <blueness@gentoo.org> mg-20140414.ebuild,
   mg-20141007.ebuild:
